fdo#79243 UI:fix preview in imageCorp tap in writer

Change-Id: If13cabc21d804c9383b26f7ee5a40800cacc76a5